package com.marco.rentflow.core.domain.bankaccount;

public enum AccountType {
    CUENTA_RUT,
    CUENTA_CORRIENTE,
    CUENTA_AHORRO,
}
