package com.marco.rentflow.core.domain.subscription;

public enum BillingCycle {
    MONTHLY,
    YEARLY
}
