package com.marco.rentflow.core.domain.user;

public enum Role {
    LANDLORD,
    TENANT,
    ADMIN
}
