package com.marco.rentflow.core.domain.user;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    BLOCKED
}
